[package]
name = "miniquad_text_fontdue"
version = "0.1.0"
authors = ["pum-purum <vladzhukovtirko@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
miniquad = { version = "0.2.*"}
fontdue = "0.0.4"
[dev-dependencies]
glam = {version = "0.8", features = ["scalar-math"] }